--- a/mediamorph_mapping.json
+++ b/mediamorph_mapping.json
@@ -1,5 +1,7 @@
 {
-  "mediamorph-2016.09.21" : {
+
+"template": "demomedia-*",
+
     "mappings" : {
       "logs" : {
         "properties" : {
@@ -9,30 +11,39 @@
           },
           "@version" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "auth" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "bytes" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "clientip" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "host" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "httpversion" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "ident" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "message" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "path" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "received_at" : {
             "type" : "date",
@@ -40,24 +51,29 @@
           },
           "received_from" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "request" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "response" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "tags" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "timestamp" : {
             "type" : "string"
+            "index": "not_analyzed"
           },
           "verb" : {
             "type" : "string"
+            "index": "not_analyzed"
           }
         }
       }
     }
-  }
 }
