--- a/mediamorph_mapping.json
+++ b/mediamorph_mapping.json
@@ -10,39 +10,39 @@
             "format" : "strict_date_optional_time||epoch_millis"
           },
           "@version" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "auth" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "bytes" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "clientip" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "host" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "httpversion" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "ident" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "message" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "path" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "received_at" : {
@@ -50,27 +50,27 @@
             "format" : "strict_date_optional_time||epoch_millis"
           },
           "received_from" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "request" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "response" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "tags" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "timestamp" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           },
           "verb" : {
-            "type" : "string"
+            "type" : "string",
             "index" : "not_analyzed"
           }
         }
